fix(quick-action-card): hyphen on safari 2

--- a/express/blocks/quick-action-card/quick-action-card.css
+++ b/express/blocks/quick-action-card/quick-action-card.css
@@ -158,8 +158,11 @@ main .quick-action-card .carousel-platform span {
   font-size: 16px;
   text-align: center;
   max-width: 66px;
-  hyphens: auto;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
   -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
 }
 
 main .quick-action-card .carousel-container::before {
